--- a/src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
+++ b/src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
@@ -6,3 +6,9 @@
   position: relative;
   margin-top: -89px !important;
 }
+
+[class*='react-pdf__Page__canvas'] {
+  display: table !important;
+  margin-left: auto;
+  margin-right: auto;
+}
