--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -107,7 +107,7 @@
     }
 
     .pdf_container {
-      display: flex;
+      //  display: flex;
       justify-content: center;
       overflow-y: scroll;
       height: calc(100vh - 210px);
@@ -388,9 +388,11 @@
   border: 1px solid #e9e9e9;
   border-radius: 4px;
   background-color: #f6f7fb;
-  div:first-child {
+  left:calc(100% - 75%);
+   div:first-child {
     max-width: 230px;
   }
+
   .buttonStyles {
     width: 24px;
     height: 25px;
