--- a/src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
+++ b/src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
@@ -1,14 +1,16 @@
-.react-pdf__Page__textContent {
-  margin-top: -35px;
-}
+// .react-pdf__Page__textContent {
+//   margin-top: -35px;
+// }
 
-.pdf-page {
-  position: relative;
-  margin-top: -89px !important;
-}
+// .pdf-page {
+//   position: relative;
+//   margin-top: -89px !important;
+// }
 
 [class*='react-pdf__Page__canvas'] {
   display: table !important;
   margin-left: auto;
   margin-right: auto;
+  width: unset !important;
+ // height: unset !important;
 }
