--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -111,6 +111,7 @@
       justify-content: center;
       overflow-y: scroll;
       height: calc(100vh - 210px);
+      outline: none;
     }
   }
   // table tbody tr:nth-child(1) { font-weight: bold; background-color: #f2f2f2; }
@@ -388,8 +389,8 @@
   border: 1px solid #e9e9e9;
   border-radius: 4px;
   background-color: #f6f7fb;
-  left:calc(100% - 75%);
-   div:first-child {
+  left: calc(100% - 75%);
+  div:first-child {
     max-width: 230px;
   }
 
