fonf family fixes

--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -103,7 +103,7 @@
   height: 24px;
   width: 170px;
   color: #000000;
-  font-family: 'Proxima Nova';
+  font-family: 'Proxima Nova' sans-serif;
   font-size: 14px;
   letter-spacing: 0;
 }
