Redux and Constant In Refactoring

--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -90,6 +90,7 @@
   [class*='MuiTableCell-body-'] {
     background-color: #f9f9f9;
     color: black;
+    padding-left: 21px !important;
   }
   [class*='MuiTableCell-head-'] {
     color: black;
