--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -145,3 +145,61 @@
     padding-left: 10px;
   }
 }
+.gridContainer {
+  align-items: center;
+  .keyText {
+    margin: unset;
+    input {
+      border: none;
+      background: #f4f4f4;
+      border-radius: unset;
+    }
+  }
+  .valueText {
+    margin-left: 10px;
+    display: flex;
+    background: #f9f9f9;
+    padding: 0 10px;
+    div {
+      margin: unset;
+    }
+    input {
+      border-radius: unset;
+      border: none;
+      background: #f9f9f9;
+    }
+    .selectBox {
+      width: 43%;
+      div {
+        border-radius: unset;
+        border: none;
+        background: #eceff4;
+      }
+    }
+  }
+  .fieldContainer {
+    display: flex;
+  }
+  .delContainer {
+    margin: unset;
+    svg {
+      cursor: pointer;
+    }
+  }
+}
+.iconDiv {
+  display: flex;
+  justify-content: flex-end;
+  .iconContainer {
+    border-radius: 50%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    color: white;
+    svg {
+      font-size: 1rem;
+      cursor: pointer;
+    }
+  }
+}
