--- a/src/features/Container/Protocols/BladeRight/BladeRight.scss
+++ b/src/features/Container/Protocols/BladeRight/BladeRight.scss
@@ -103,7 +103,7 @@ a:hover {
 .switch-padding {
   padding-top: 30px;
 }
-.divpadding {
+.menu-item-align {
   padding-left: 39px;
   padding-top: 10px;
 }
