navigation text padding fix

--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -21,7 +21,7 @@
   }
 
   [class*='Blade-header-'] > h3 {
-    text-align: center;
+    padding-left: 20px;
   }
   [class*='Blade-body-'] > div > div {
     background: #f6f7fb;
