--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -31,3 +31,13 @@
     font-size: 14px;
   }
 }
+
+.drag {
+  color: 'grey';
+  font-size: '1.2em';
+  padding: '15px';
+  padding-left: '5px';
+}
+.card-boarder {
+  border-right: 0 !important;
+}
