--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -1,7 +1,7 @@
 .section-single-content {
   .readable-content {
     height: auto;
-    max-height: 500px;
+    max-height: 60vh;
     flex: 1 1 auto;
     .supContent {
       display: flex;
