--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -8,11 +8,15 @@
 }
 .protocols {
   > div.p-rl-20:first-child {
-    padding-left: 35px;
+    padding-left: 16px;
   }
   .protocol-breadcrumb {
     margin-bottom: 0;
     padding-inline-start: 0;
+  }
+
+  .breadcrumb-wrapper {
+    padding-left: 35px !important;
   }
 
   margin-top: 48px;
@@ -23,6 +27,11 @@
     padding-right: 20px;
     display: flex;
   }
+
+  .p-l-45 {
+    padding-left: 45px;
+  }
+
   .protocol-source-column,
   .protocol-digitize-column {
     border: none;
