--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -16,6 +16,9 @@
   }
 
   .breadcrumb-wrapper {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
     padding-left: 35px !important;
   }
 
@@ -23,13 +26,9 @@
   // max-width: 1200px;
 
   .p-rl-20 {
-    padding-left: 45px;
+    padding-left: 20px;
     padding-right: 20px;
     display: flex;
-  }
-
-  .p-l-45 {
-    padding-left: 45px;
   }
 
   .protocol-source-column,
@@ -145,6 +144,7 @@
     flex-direction: column;
     .tabs-wrapper {
       flex: 1;
+      padding-left: 45px;
     }
     .overview {
       margin-left: 9px;
