--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -11,6 +11,7 @@
     width: 100%;
     overflow-y: scroll;
     height: auto !important;
+    display: block !important;
   }
   .view-wrapper .MuiCard-root {
     padding: 0;
@@ -143,5 +144,9 @@
     align-items: center;
     height: 48px;
     padding-left: 10px;
+  }
+  .checkbox-right {
+    display: flex !important;
+    float: right !important;
   }
 }
