--- a/src/features/Container/Protocols/CustomComponents/Dropdown/style.scss
+++ b/src/features/Container/Protocols/CustomComponents/Dropdown/style.scss
@@ -3,7 +3,9 @@
   display: inline-block;
   .dropbtn {
     background-color: #fff;
-    color: #333;
+    &:not(:disabled){
+      color: #333;
+    }
     font-size: 14px;
     border: none;
     cursor: pointer;
