--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -340,7 +340,9 @@
     padding-left: 10px;
   }
   .view-wrapper > .panel_group > .react-resizable:last-child {
-    width: 100% !important;
+    &:first-child {
+      width: 100% !important;
+    }
     padding-right: 10px;
     float: right;
   }
@@ -467,12 +469,6 @@
 
 .ce-block__content {
   max-width: 95%;
-}
-
-.Richtextcontainer {
-  height: 500px;
-  padding-left: 30px;
-  padding-top: 20px;
 }
 
 .content_header {
