--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -116,10 +116,12 @@
     background-color: #f9f9f9;
     color: black;
     padding-left: 21px !important;
+    word-break: break-word;
   }
   [class*='MuiTableCell-head-'] {
     color: black;
     padding-left: 23px;
+    word-break: break-all;
   }
 
   .digitize-panel-content::-webkit-scrollbar {
