--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -9,6 +9,10 @@
     height: auto;
     max-height: 60vh;
     flex: 1 1 auto;
+    .enriched-txt{
+      color: #FF9300;
+      cursor: pointer;
+  }
     .supContent {
       display: flex;
     }
