style fix for main header

--- a/src/features/Container/Navbar/Navbar.scss
+++ b/src/features/Container/Navbar/Navbar.scss
@@ -1,4 +1,4 @@
-.navbar [class*='NavigationBar-toolbar'] {
+.navbar [class*='MuiToolbar-root'] {
   width: 100% !important;
   padding: 0 45px !important;
 }
