fixes for table ui

--- a/src/features/Container/Protocols/CustomComponents/hoverComponent.scss
+++ b/src/features/Container/Protocols/CustomComponents/hoverComponent.scss
@@ -16,6 +16,7 @@
   .add-element {
     display: flex;
     align-items: center;
+    min-width: 84px;
     svg{
       width: 20px;
       margin-right: 5px;
