--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -1,6 +1,7 @@
 .pd-table-container {
   display: flex;
   margin: 20px;
+  position: relative;
 }
 .pd-table-inner {
   display: table;
@@ -24,7 +25,14 @@
   box-sizing: border-box;
   min-width: 100px;
 }
-
+.content-table-wrapper{
+  border: 1px solid #dadada;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  box-shadow: inset 0 0 2px 3px rgba(233, 233, 233, .40);
+}
 /* .pd-table-inner {
   display: table;
   width: 100%;
@@ -57,7 +65,7 @@
 }
 .pd-empty-row-cells {
   position: absolute;
-  left: 0;
+  left: -21px;
   /* display: grid;
   flex-direction: column;
   justify-content: center; */
@@ -77,8 +85,8 @@
 }
 .pd-dropdown {
   position: absolute;
-  top: 30px;
-  left: 40px;
+  top: 25px;
+  left: 0px;
   z-index: 2;
   border: 1px solid rgba(0, 0, 0, 0.04);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -113,6 +121,7 @@
 .pd-more-icon {
   height: .7em;
   width: .7em;
+  cursor: pointer;
   svg {
     height: .7em;
     width: .7em;
@@ -122,5 +131,4 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-right: 30px;
 }
