--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -103,6 +103,7 @@
   display: flex;
   padding: 5px;
   align-items: center;
+  cursor: pointer;
 }
 .pd-dropdown ul li:hover {
   background-color: #eee;
