--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -26,7 +26,7 @@
   [class*='Blade-body-'] > div > div {
     background: #f6f7fb;
   }
-  [class*='Blade-body-'] > div > div [class*='Accordion-expanded-'] > p {
+  [class*='Mui-expanded'] > p {
     font-weight: bold;
   }
   [class*='blade-body-'] > div > div [class*='MuiAccordion-root-'] {
