--- a/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
+++ b/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
@@ -17,8 +17,10 @@
   justify-content: center;
   align-items: center;
   height: 20vh;
+  min-height: 150px;
 
-  img {
+  .richTextImg {
     height: 100%;
+    min-height: 150px;
   }
 }
