--- a/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
+++ b/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
@@ -18,9 +18,30 @@
   align-items: center;
   height: 20vh;
   min-height: 150px;
+}
 
-  .richTextImg {
-    height: 100%;
-    min-height: 150px;
-  }
+.richTextImg {
+  height: 100%;
+  min-height: 150px;
+}
+
+.img-container-read-mode {
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  width: max-content;
+  height: 20vh;
+  min-height: 150px;
+  position: relative;
+}
+
+.img-edit-btn-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
