click outside issue

--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -45,3 +45,9 @@
 .card-boarder {
   border-right: 0 !important;
 }
+.modal-opened {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
