--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -35,6 +35,18 @@
   margin-right: 20px;
   box-shadow: inset 0 0 2px 3px rgba(233, 233, 233, .40);
   position: relative;
+  .confirmation-popup{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.85);
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 /* .pd-table-inner {
   display: table;
