--- a/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
+++ b/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
@@ -6,7 +6,6 @@
   box-shadow: inset 0 0 2px 3px rgb(233 233 233 / 40%);
   display: flex;
   flex-direction: column-reverse;
-  width: 100%;
   align-items: center;
   height: 20vh;
   min-height: 200px;
@@ -33,11 +32,11 @@
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 20px;
-  width: 50%;
+
   position: relative;
 
   .rich-text-img {
-    width: 100%;
+    width: 50%;
   }
 }
 
@@ -45,12 +44,13 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
+  left: 0;
+  bottom: 0;
+  width: 50%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgb(0, 0, 0, 0.4);
+  justify-content: flex-end;
+  align-items: flex-start;
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .delete-confirmation-box {
@@ -58,17 +58,20 @@
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
-  /* display: flex; */
+  left: -2px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  background: rgb(256, 256, 256, 0.9);
+  width: 50%;
+  background: rgba(255, 255, 255, 0.9);
   margin: 2px;
+  border: 1px solid #aaa;
+  flex-direction: column;
 
   p {
     text-align: center;
     font-size: 18px;
+    margin-bottom: 20px;
   }
 
   button:first-child {
