--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -193,6 +193,7 @@
     width: 100%;
     justify-content: space-between;
     div {
+      width: 100%;
       border-radius: unset;
       margin: unset;
       background: #f9f9f9;
