--- a/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
@@ -1,4 +1,10 @@
 .Richtextcontainer {
+  position: relative;
+  height: 500px;
+  overflow-x: scroll;
+  .section-edited-list {
+    margin-top: 20px;
+  }
   [class*='MuiInputBase-root'] {
     width: 85px !important;
     padding-left: '2px';
@@ -45,4 +51,22 @@
       box-sizing: border-box;
     }
   }
+}
+
+.content_container {
+  min-height: 30px;
+  > div {
+    position: relative;
+  }
+  > div > .format-container > .contentEditable {
+    min-width: 300px;
+    min-height: 24px;
+  }
+}
+
+.editable {
+  margin: 0;
+  height: 200px;
+  border: 1px solid #ccc;
+  overflow: auto;
 }
