--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -93,7 +93,7 @@
       margin-top: 30px;
       margin-bottom: 2%;
       width: 100%;
-      background-color: rgb(211 211 211 / 50%);
+      // background-color: rgb(211 211 211 / 50%);
       font-size: 14px;
     }
     h3,
@@ -104,7 +104,7 @@
       margin-top: 30px;
       margin-bottom: 2%;
       width: 100%;
-      background-color: rgb(211 211 211 / 30%);
+      // background-color: rgb(211 211 211 / 30%);
       font-size: 14px;
     }
     .panel_group {
@@ -112,6 +112,9 @@
       padding: 1px;
       box-sizing: content-box;
       width: 100%;
+      > [class*='Panel-container-'] {
+        max-width: 100% !important;
+      }
     }
 
     .pdf_container {
@@ -337,7 +340,9 @@
     padding-left: 10px;
   }
   .view-wrapper > .panel_group > .react-resizable:last-child {
-    width: 100% !important;
+    &:first-child {
+      width: 100% !important;
+    }
     padding-right: 10px;
     float: right;
   }
@@ -456,4 +461,17 @@
 
 .accordion_details_loader {
   height: 40px;
+}
+
+.ce-toolbar__content {
+  max-width: 95%;
+}
+
+.ce-block__content {
+  max-width: 95%;
+}
+
+.content_header {
+  font-weight: bold;
+  margin-bottom: 15px;
 }
