--- a/src/features/Container/Protocols/BladeRight/BladeRight.scss
+++ b/src/features/Container/Protocols/BladeRight/BladeRight.scss
@@ -86,6 +86,9 @@ a:hover {
 }
 
 .Button-flex {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
   [class*='Link-root-']:hover {
     border-bottom: none !important;
   }
