--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -16,7 +16,7 @@
   }
 
   .breadcrumb-wrapper {
-    padding-left: 20px;
+    // padding-left: 20px;
     padding-right: 20px;
     display: flex;
     padding-left: 35px !important;
@@ -53,7 +53,12 @@
     margin-bottom: 10px;
     // display: block;
   }
+
   .view-wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+    padding-left: 10px;
     html {
       scroll-behavior: smooth;
     }
@@ -333,12 +338,7 @@
     flex-direction: column;
     height: 50%;
   }
-  .view-wrapper {
-    position: relative;
-    width: 100%;
-    display: flex;
-    padding-left: 10px;
-  }
+
   .view-wrapper > .panel_group > .react-resizable:last-child {
     &:first-child {
       width: 100% !important;
