--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -7,29 +7,35 @@
   text-align: justify;
   display: flex;
   flex-direction: column;
-  .content_container, .readable-content{
-    h1, h2, h3, h4, h5, h6{
+  .content_container,
+  .readable-content {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       font-size: 30px;
       width: auto;
       margin: 0 0 10px;
       padding: 4px 0;
     }
-    h2{
+    h2 {
       font-size: 26px;
     }
-    h3{
+    h3 {
       font-size: 24px;
       margin-bottom: 8px;
     }
-    h4{
+    h4 {
       font-size: 20px;
       margin-bottom: 6px;
     }
-    h5{
+    h5 {
       font-size: 18px;
       margin-bottom: 4px;
     }
-    h6{
+    h6 {
       font-size: 16px;
       margin-bottom: 2px;
     }
@@ -44,10 +50,10 @@
     height: auto;
     max-height: 60vh;
     flex: 1 1 auto;
-    .enriched-txt{
-      color: #FF9300;
+    .enriched-txt {
+      color: #ff9300;
       cursor: pointer;
-  }
+    }
     .supContent {
       display: flex;
     }
@@ -68,6 +74,10 @@
   p {
     line-height: 1.2;
     padding: 10px 0;
+  }
+
+  .discard-icon {
+    margin-left: 6px;
   }
 }
 
