Feature/pd 3237 api integration

--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -110,16 +110,16 @@
 
   [class*='MuiTableCell-root-']:first-child {
     background-color: #f4f4f4;
-    padding-left: 23px;
+    padding-left: 10px;
+    width: max-content;
   }
   [class*='MuiTableCell-body-'] {
     background-color: #f9f9f9;
     color: black;
-    padding-left: 21px !important;
   }
   [class*='MuiTableCell-head-'] {
     color: black;
-    padding-left: 23px;
+    padding-left: 10px;
   }
 
   .digitize-panel-content::-webkit-scrollbar {
@@ -129,14 +129,6 @@
   [class*='MuiAccordionDetails-root-'] {
     padding: 0;
     display: contents;
-  }
-  .protocols {
-    .view-wrapper {
-      table tbody tr td {
-        padding-left: 23px;
-        width: 1%;
-      }
-    }
   }
 
   [class*='MuiTableRow-root-'] {
@@ -178,28 +170,30 @@
     width: 100%;
   }
 }
+.keyText {
+  margin: unset;
+  input {
+    border: none;
+    background: #f4f4f4;
+    border-radius: unset;
+  }
+  div {
+    margin-top: unset;
+  }
+}
 .gridContainer {
   align-items: center;
-  .keyText {
-    margin: unset;
-    input {
-      border: none;
-      background: #f4f4f4;
-      border-radius: unset;
-    }
-    div {
-      margin-top: unset;
-    }
-  }
+  padding: 0 2px;
   .valueText {
-    margin-left: 10px;
+    margin-left: 2px;
     display: flex;
     align-items: center;
     background: #f9f9f9;
-    padding-right: 10px;
+    padding-right: 3px;
     width: 100%;
     justify-content: space-between;
     div {
+      width: 100%;
       border-radius: unset;
       margin: unset;
       background: #f9f9f9;
@@ -211,7 +205,7 @@
       border: none;
     }
     .selectBox {
-      width: 43%;
+      width: 75%;
       div {
         border-radius: unset;
         border: none;
@@ -241,10 +235,10 @@
     display: flex;
     justify-content: center;
     padding: 5px;
-    color: white;
     svg {
       font-size: 1rem;
       cursor: pointer;
+      color: white;
     }
   }
 }
