fixing sonarquube issue in bladeleft.scss

--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -107,7 +107,7 @@
   height: 24px;
   width: 170px;
   color: #000000;
-  font-family: 'Proxima Nova' sans-serif;
+  font-family: 'Proxima Nova', sans-serif;
   font-size: 14px;
   letter-spacing: 0;
 }
