--- a/src/features/Container/Protocols/CustomComponents/renderContent.scss
+++ b/src/features/Container/Protocols/CustomComponents/renderContent.scss
@@ -1,6 +1,6 @@
 .format-container {
   position: relative;
-  width: max-content;
+  width: auto;
   min-width: 300px;
   max-width: 100%;
   margin-bottom: 5px;
