--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -1,5 +1,6 @@
 .pd-table-container {
   display: flex;
+  flex-direction: column;
   margin: 25px 20px;
   position: relative;
   margin-bottom: 45px;
@@ -27,15 +28,15 @@
   box-sizing: border-box;
   min-width: 100px;
 }
-.content-table-wrapper{
+.content-table-wrapper {
   border: 1px solid #dadada;
   padding: 10px;
   border-radius: 5px;
   margin-bottom: 10px;
   margin-right: 20px;
-  box-shadow: inset 0 0 2px 3px rgba(233, 233, 233, .40);
+  box-shadow: inset 0 0 2px 3px rgba(233, 233, 233, 0.4);
   position: relative;
-  .confirmation-popup{
+  .confirmation-popup {
     position: absolute;
     top: 0;
     left: 0;
@@ -47,7 +48,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    p{
+    p {
       margin: 0 0 20px;
     }
   }
@@ -122,12 +123,12 @@
   align-items: center;
 }
 .pd-more-icon {
-  height: .7em;
-  width: .7em;
+  height: 0.7em;
+  width: 0.7em;
   cursor: pointer;
   svg {
-    height: .7em;
-    width: .7em;
+    height: 0.7em;
+    width: 0.7em;
   }
 }
 .button-container {
