--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -66,6 +66,7 @@
   [class*='MuiAccordion-root'] {
     margin-top: 10px;
     background-color: #f6f7fb;
+    border: none;
   }
   [class*='MuiAccordionDetails-root-'] {
     padding: 0 0 0px 10px;
