--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -1,9 +1,10 @@
 .pd-table-container {
   display: flex;
   flex-direction: column;
-  margin: 25px 20px;
+  padding: 25px 20px;
   position: relative;
   margin-bottom: 45px;
+  overflow-x:auto;
 }
 .pd-table-inner {
   display: table;
@@ -68,14 +69,14 @@
 }
 .pd-empty-row-cells {
   position: absolute;
-  left: -21px;
+  left: 3px;
 }
 .pd-empty-cells {
   display: flex;
   justify-content: center;
   position: absolute;
   width: 100%;
-  top: -25px;
+  top: 5px;
 }
 .pd-empty-cell-column {
   width: 100px;
