--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -72,6 +72,10 @@
     line-height: 1.2;
     padding: 10px 0;
   }
+  .section-actions{
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 @media only screen and (max-width: 1366px) {
