--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -91,14 +91,18 @@
 }
 .pd-dropdown {
   position: absolute;
-  top: 25px;
-  left: 0px;
+  top: -25px;
+  left: 20px;
   z-index: 2;
   border: 1px solid rgba(0, 0, 0, 0.04);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   width: 220px;
   background-color: #fff;
   font-size: 14px;
+}
+.pd-empty-cell-column .pd-dropdown {
+  top: 25px;
+  left: 0;
 }
 .pd-dropdown ul {
   list-style-type: none;
