--- a/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
@@ -53,6 +53,23 @@
   }
 }
 
+.confirmation-popup {
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(256, 256, 256, 0.8);
+  p {
+    margin-bottom: 20px;
+  }
+}
+
 .content_container {
   min-height: 30px;
   > div {
