--- a/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
@@ -57,8 +57,7 @@
   position: absolute;
   width: 100%;
   z-index: 1000;
-  height: 100%;
-  top: 0;
+  top: 48px;
   bottom: 0;
   display: flex;
   flex-direction: column;
