--- a/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
@@ -55,10 +55,11 @@
 
 .confirmation-popup {
   position: absolute;
-  width: 100%;
   z-index: 1000;
   top: 48px;
   bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
