--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -40,7 +40,7 @@
   position: relative;
   .confirmation-popup {
     position: absolute;
-    top: 10px;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
