add 70vh heaight as discussed with gurpreet

--- a/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
@@ -1,6 +1,6 @@
 .Richtextcontainer {
   position: relative;
-  height: 500px;
+  height: 70vh;
   overflow-x: scroll;
   .section-edited-list {
     margin-top: 20px;
