--- a/src/features/Container/Navbar/Alerts.scss
+++ b/src/features/Container/Navbar/Alerts.scss
@@ -19,6 +19,14 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+.horizontal-line {
+  width: 301px;
+}
+
+.IconButton-delete {
+  margin-bottom: 34px;
+  display: none;
+}
 .ListItem-root {
   width: 100%;
   display: flex;
@@ -30,6 +38,14 @@
   padding-bottom: 11px;
   justify-content: flex-start;
   text-decoration: none;
+  &:hover {
+    .IconButton-delete {
+      display: block;
+    }
+    .timestamp {
+      display: none;
+    }
+  }
 }
 
 .ListItem-button {
@@ -80,7 +96,7 @@
   pointer-events: none;
 }
 .root {
-  width: "100%";
+  width: '100%';
   max-width: 360px;
   background-color: #ffffff;
   position: relative;
@@ -92,19 +108,20 @@
   color: #444444;
   height: 72px;
   outline: none;
-  padding-left: 14px;
-  border-bottom: 0.5px solid rgb(128 128 128 / 15%);
+  padding-left: 24px;
+  // border-bottom: 0.5px solid rgb(128 128 128 / 15%);
   padding-right: 24px;
 }
+
 .listItem:hover {
-  background-color: rgb(128 128 128 / 15%);
+  background-color: #ecf3ff;
 }
 .listItemTextRoot {
   padding-left: 0;
   white-space: nowrap;
 }
 .listItemTextPrimary {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
   color: inherit;
   overflow: hidden;
@@ -112,7 +129,7 @@
 }
 .listItemTextSecondary {
   width: 310px;
-  font-size: 14px;
+  font-size: 12px;
   color: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -120,24 +137,33 @@
 }
 .listItemNotRead {
   height: 72px;
-  outline: none;
-  padding-left: 14px;
+  padding-left: 24px;
   padding-right: 24px;
-  background-color: #eaeaea;
-  color: #0076ae;
-  & p {
-    color: #0076ae;
-  }
-  & svg {
-    color: #0076ae;
+  // border-bottom: 0.5px solid rgb(128 128 128 / 15%);
+
+  &:before {
+    content: '';
+    background: red;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    left: 7px;
+    top: 10px;
+    border-radius: 20px;
   }
 }
+
+.listItemNotRead:hover {
+  background-color: #ecf3ff;
+}
+
 .timestamp {
   color: #595959;
-  bottom: 8px;
+  bottom: 18px;
   position: relative;
   white-space: nowrap;
   line-height: 1.71;
+  font-size: 13px;
   // IE11-specific selector
   // @media all and (-ms-high-contrast: none) (-ms-high-contrast: active) {
   //   right: 48;
@@ -164,4 +190,20 @@
 .ListItemText-multiline {
   margin-top: 6px;
   margin-bottom: 6px;
+}
+
+.notificationHeading {
+  padding: 15px;
+  font-weight: 1200;
+  margin-left: 25px;
+}
+
+.ReactVirtualized__Grid {
+  & > div {
+    overflow: visible !important;
+  }
+}
+
+.MuiPopover-paper {
+  overflow: visible !important;
 }
