--- a/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/DigitizedEdit.scss
@@ -1,6 +1,6 @@
 .Richtextcontainer {
   position: relative;
-  height: 500px;
+  height: 70vh;
   overflow-x: scroll;
   .section-edited-list {
     margin-top: 20px;
@@ -50,6 +50,23 @@
       width: 25px;
       box-sizing: border-box;
     }
+  }
+}
+
+.confirmation-popup {
+  position: absolute;
+  z-index: 1000;
+  top: 48px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(256, 256, 256, 0.8);
+  p {
+    margin-bottom: 20px;
   }
 }
 
