--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -371,6 +371,20 @@
   flex-direction: row;
   padding: 2px 2px 0 15px;
   position: relative;
+  .plus-icon {
+    //  margin-bottom: -12px;
+    display: flex;
+    justify-content: end;
+    margin-right: -2px;
+    // margin-top: -16px;
+    // margin-top: -16px;
+  }
+  .size {
+    font-size: small;
+  }
+  .icon {
+    display: flex;
+  }
 }
 
 .digitized_data_item > svg {
@@ -419,6 +433,9 @@
 
 .digitized_data_item .edited-text {
   width: 100%;
+}
+[class*='MuiAccordionSummary-content-'] {
+  display: flex;
 }
 
 .digitized_data_item .edited-text input {
