--- a/src/features/Container/QC/QC.scss
+++ b/src/features/Container/QC/QC.scss
@@ -7,7 +7,6 @@
       font-size: 14px;
       margin-right: 0;
       padding: 6px 14px;
-      border: 0px solid white;
       min-height: 10px;
       opacity: 0.5;
       border-bottom-width: 5px;
@@ -33,7 +32,7 @@
     width: 100px;
     height: 35px;
     position: absolute;
-    margin: 87%;
+    left: 87%;
     margin-top: 8px;
     z-index: 1;
   }
