--- a/src/features/Container/QC/QC.scss
+++ b/src/features/Container/QC/QC.scss
@@ -1,22 +1,20 @@
 .qc-parent {
-  padding-left: 20px;
-  max-width: 1140px;
-  // margin: 30px 70px auto 10px;
+  margin-left: 37px;
+  margin-top: 65px;
   .qc-tabs-parent {
     margin-top: 20px;
     .MuiTab-root {
       font-size: 14px;
       margin-right: 0;
       padding: 6px 14px;
-      border: 1px solid #c3c3c3;
       min-height: 10px;
       opacity: 0.5;
+      border-bottom-width: 5px;
+      --tw-border-opacity: 0;
+      border-color: #0768fd;
     }
     .MuiTab-textColorInherit.Mui-selected {
       opacity: 1;
-    }
-    .MuiTabs-root::before {
-      border: none;
     }
     .MuiTabs-indicator {
       display: none;
@@ -29,5 +27,24 @@
       white-space: nowrap;
       overflow: hidden;
     }
+  }
+  .button-style {
+    width: 100px;
+    height: 35px;
+    position: absolute;
+    left: 87%;
+    margin-top: 8px;
+    z-index: 1;
+  }
+  .MuiTabs-root::before {
+    width: 13%;
+  }
+  .modal {
+    max-width: 100%;
+  }
+  .breadcrumbs {
+    padding-inline-start: 0;
+    margin-bottom: 0;
+    margin-top: 66px;
   }
 }
