--- a/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
+++ b/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
@@ -53,3 +53,9 @@
   top: 1%;
   margin-left: 80%;
 }
+.delete-tag {
+  display: flex;
+  flex-direction: row-reverse;
+  color: rgb(16, 179, 243);
+  height: 25px;
+}
