--- a/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
@@ -1,7 +1,6 @@
 .action-menu {
-  position: absolute;
-  right: 0px;
-  top: 45px;
+  position: sticky;
+  top: 0px;
   bottom: 0;
   z-index: 1000;
   background: #fff;
