--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -342,7 +342,7 @@
     }
     padding-right: 10px;
     float: right;
-    width: 100% !important;
+    //width: 100% !important;
   }
 
   .view-wrapper .digitize-panel-content {
